[package]
name = "mnist"
description = "MNIST data set parser."
version = "0.4.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
repository = "https://github.com/davidMcneil/mnist"
documentation = "https://docs.rs/mnist"
keywords = ["mnist", "machine", "learning", "machine-learning", "images"]
readme = "README.md"
license = "MIT"
exclude = [
    "data/*",
    "data_sets/*",
]

[dependencies]
byteorder = "1.0.0"

[dev-dependencies]
rulinalg = "0.4.1"
