[package]
name = "mnist"
description = "MNIST data set parser."
version = "0.4.1"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
repository = "https://github.com/davidMcneil/mnist"
documentation = "https://docs.rs/mnist"
keywords = ["mnist", "machine", "learning", "machine-learning", "images"]
readme = "README.md"
license = "MIT"
exclude = [
    "data/*",
    "data_sets/*",
]
edition = "2018"

[features]
default = []
download = ["reqwest", "flate2"]

[dependencies]
byteorder = "1.0.0"

# Used to download datasets
reqwest = {version = "0.10", optional = true, features = ["blocking"]}
flate2 = {version = "1.0.2", optional = true, features = ["rust_backend"], default-features = false}

[dev-dependencies]
rulinalg = "0.4.1"
# minifb is used to visualize datasets in a pop-up window
minifb = "0.17"