[package]
name = "mnist"
description = "MNIST data set parser."
version = "0.4.1"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
repository = "https://github.com/davidMcneil/mnist"
documentation = "https://docs.rs/mnist"
keywords = ["mnist", "machine", "learning", "machine-learning", "images"]
readme = "README.md"
license = "MIT"
exclude = [
    "data/*",
    "data_sets/*",
]
edition = "2018"

[features]
default = []
download = ["curl", "pbr", "flate2"]

[dependencies]
byteorder = "1.0.0"

# Used to download datasets
curl = {version = "0.4", optional = true}
pbr = {version = "1.0", optional = true}
flate2 = {version = "1.0.2", optional = true, features = ["rust_backend"], default-features = false}

[dev-dependencies]
ndarray = "0.14"
image = "0.23"
# minifb is used to visualize datasets in a pop-up window
show-image = {version = "0.6", features = ["image"]}